-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.1, 5.7.0
-
323fd0037c8d3e016c66fea024b57b11763624ed
To reproduce, run attached example.
QQuickItem::stackBefore: Cannot stack before 0x0, which must be a sibling QQuickItem::stackBefore: Cannot stack before 0x0, which must be a sibling
- resulted from
-
QTBUG-21792 Instantiate view delegates asynchronously
-
- Closed
-
| For Gerrit Dashboard: QTBUG-54859 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 165648,7 | Fix crash when moving items during asynchronous creation | 5.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |